# heisenberg

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE  Makefile  README.md
benches/: performance.rs
examples/: .gitkeep
examples/actix-react/: Cargo.toml  README.md
examples/actix-react/src/: main.rs
examples/axum-multi-spa/: Cargo.toml  README.md
examples/axum-multi-spa/admin-dist/: index.html
examples/axum-multi-spa/app-dist/: index.html
examples/axum-multi-spa/landing-dist/: index.html
examples/axum-multi-spa/src/: main.rs
examples/axum-simple/: Cargo.toml  README.md
examples/axum-simple/src/: main.rs
examples/axum-sveltekit/: Cargo.toml  README.md
examples/axum-sveltekit/src/: main.rs
examples/axum-sveltekit/web/: package-lock.json  package.json
examples/axum-sveltekit/web/src/routes/: +page.svelte
examples/axum-sveltekit/web/src/routes/about/: +page.svelte
examples/logging-example/: Cargo.toml  README.md
examples/logging-example/src/: main.rs
examples/rocket-vue/: Cargo.toml  README.md  index.html  package.json  vite.config.js
examples/rocket-vue/src/: main.rs
examples/rocket-vue/src-vue/: App.vue
scripts/: ci-check.sh
src/: error.rs  lib.rs
src/adapters/: actix.rs  mod.rs  rocket.rs
src/core/: config.rs  mod.rs  mode.rs  router.rs
src/services/: health.rs  mod.rs  process.rs  proxy.rs  static_files.rs
src/tower/: future.rs  layer.rs  mod.rs  service.rs
src/utils/: browser.rs  mod.rs  package_json.rs  paths.rs
tests/: .gitkeep  actix_integration.rs  core_config.rs  error_handling.rs  integration_basic.rs  mode_detection.rs  package_json_utils.rs  rocket_integration.rs  router.rs  tower_integration.rs
tests/common/: mod.rs  test_utils.rs
tests/fixtures/sample_spa/: package.json
