[package]
name = "axum-multi-spa"
version = "0.1.0"
edition = "2021"

[dependencies]
heisenberg = { path = "../..", features = ["tower"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }